<resources>
    <string name="app_name">Práctica 6 - Intent explícito</string>
    <string name="cabecera">Actividad principal. Presiona algún botón para iniciar la subactividad.
        Primero debes dar de alta un contacto.</string>
    <string name="alta">Alta de contacto</string>
    <string name="modif">Modificar contacto</string>
    <string name="datos">Datos de contacto</string>
    <string name="vacio">No has dado de alta ningún contacto</string>
    <string name="name">Nombre:</string>
    <string name="ape">Apellidos:</string>
    <string name="cabecera2">Alta de contacto. Indica el nombre y los apellidos.</string>
    <string name="cabecera3">Modificar contacto. Cambia el nombre y los apellidos.</string>
    <string name="aceptar">Aceptar (finaliza esta Subactividad)</string>
    <string name="gestion">Gestión de contactos</string>
</resources>
