<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="353dp"
        android:layout_height="126dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/cabecera"
        android:textSize="22sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="174dp"
        android:layout_height="69dp"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:text="@string/alta"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="69dp"
        android:layout_alignEnd="@+id/textView"
        android:layout_below="@+id/textView"
        android:layout_marginEnd="0dp"
        android:text="@string/modif"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/datos"
        android:editable="false"
        android:enabled="false"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText"
        android:layout_marginStart="20dp"
        android:text="@string/vacio"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="90dp"
        android:layout_height="33dp"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView2"
        android:text="@string/name"
        android:textSize="22sp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView3"
        android:text="@string/ape"
        android:textSize="22sp"
        android:visibility="invisible"/>
</RelativeLayout>